; ModuleID = '/home/carl/AnghaBench/libgit2/tests/network/remote/extr_isvalidname.c_test_network_remote_isvalidname__can_detect_invalid_formats.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/network/remote/extr_isvalidname.c_test_network_remote_isvalidname__can_detect_invalid_formats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"/\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"//\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c".lock\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"a.lock\00", align 1
@.str.4 = private unnamed_addr constant [18 x i8] c"/no/leading/slash\00", align 1
@.str.5 = private unnamed_addr constant [19 x i8] c"no/trailing/slash/\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_network_remote_isvalidname__can_detect_invalid_formats() #0 {
  %1 = call i32 @git_remote_is_valid_name(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %2 = call i32 @cl_assert_equal_i(i32 0, i32 %1)
  %3 = call i32 @git_remote_is_valid_name(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  %4 = call i32 @cl_assert_equal_i(i32 0, i32 %3)
  %5 = call i32 @git_remote_is_valid_name(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  %6 = call i32 @cl_assert_equal_i(i32 0, i32 %5)
  %7 = call i32 @git_remote_is_valid_name(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0))
  %8 = call i32 @cl_assert_equal_i(i32 0, i32 %7)
  %9 = call i32 @git_remote_is_valid_name(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.4, i64 0, i64 0))
  %10 = call i32 @cl_assert_equal_i(i32 0, i32 %9)
  %11 = call i32 @git_remote_is_valid_name(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.5, i64 0, i64 0))
  %12 = call i32 @cl_assert_equal_i(i32 0, i32 %11)
  ret void
}

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_remote_is_valid_name(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
